5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4358/executions/1721_3041.log
== SUBMITION (2019-05-02 18:50:51) 
-- CODE:
from math imṕort*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("Entrada invalida")
elif(x>=-1000)and(x<-2):
	print(-1/x+2)
elif(x>2)and(x<=1000):
	print(1/x-2)

-- EXECUTION TIME:
0.177329
-- ERROR:
  File "/home/codebench/codes/1721/3041/main.py", line 1
    from math im\u1e55ort*
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:50:59) 
-- CODE:
from math imṕort*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(-1/x+2)
elif(x>2)and(x<=1000):
	print(1/x-2)

-- EXECUTION TIME:
0.130294
-- ERROR:
  File "/home/codebench/codes/1721/3041/main.py", line 1
    from math im\u1e55ort*
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:51:02) 
-- CODE:
from math imṕort*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(-1/x+2)
elif(x>2)and(x<=1000):
	print(1/x-2)

-- ERROR:
File "XXXX", line 1
    from math imṕort*
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:51:39) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))

-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:51:54) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:52:10) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- EXECUTION TIME:
0.170502
-- ERROR:
  File "/home/codebench/codes/1721/3041/main.py", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:12) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:12) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:13) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:13) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:13) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:13) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:14) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:14) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:14) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:15) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:15) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:15) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:15) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:15) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:16) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:16) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:16) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:17) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:17) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:17) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:17) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:18) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:18) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:18) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:18) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:18) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:19) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:19) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:19) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:19) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:19) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:20) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:20) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:20) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:20) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:20) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:20) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:20) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:20) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:20) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:20) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:20) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:20) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:20) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:20) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:21) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:21) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:21) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:21) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:21) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(-1/x+2,4))
elif(x>2)and(x<=1000):
	print((round(1/x-2,4))
-- ERROR:
File "XXXX", line 9
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:54:09) 
-- CODE:
from math import*
x=float(input("Digite o valor em graus:"))
y=-(1/x+2)
g=(1/(x-2))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(y,4))
elif(x>2)and(x<=1000):
	print((round(g,4))
-- ERROR:
File "XXXX", line 11
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:54:47) 
-- CODE:
from math import*

x=float(input("Digite o valor em graus:"))
y=-(1/x+2)
g=(1/(x-2))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(y,4))
elif(x>2)and(x<=1000):
	print((round(g,4))
-- EXECUTION TIME:
0.182976
-- ERROR:
  File "/home/codebench/codes/1721/3041/main.py", line 12
    
                       ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:54:49) 
-- CODE:
from math import*

x=float(input("Digite o valor em graus:"))
y=-(1/x+2)
g=(1/(x-2))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(y,4))
elif(x>2)and(x<=1000):
	print((round(g,4))
-- ERROR:
File "XXXX", line 12
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:54:56) 
-- CODE:
from math import*

x=float(input("Digite o valor em graus:"))
y=-(1/x+2)
g=(1/(x-2))
if(x<-1000)or(x>1000):
	print("entrada invalida")
elif(x>=-1000)and(x<-2):
	print(round(y,4))
elif(x>2)and(x<=1000):
	print((round(g,4))
-- EXECUTION TIME:
0.172729
-- ERROR:
  File "/home/codebench/codes/1721/3041/main.py", line 12
    
                       ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
